--- a/index.html
+++ b/index.html
@@ -207,6 +207,16 @@
     <div class="track-list">
         <!-- Трек 1 -->
         <div class="track-item">
+            <img src="covers/cover2.jpg" class="track-cover" alt="Обложка трека">
+            <div class="track-info">
+                <h2 class="gradient-text" style="margin-bottom: 10px;">Фотонный чиж</h2>
+                <audio controls>
+                    <source src="tracks/чиж.mp3" type="audio/mpeg">
+                </audio>
+                <button class="btn" onclick="window.location.href='tracks/чиж.mp3'">Скачать</button>
+            </div>
+        </div>
+        <div class="track-item">
             <img src="https://avatars.yandex.net/get-music-content/14715139/94354bf3.a.36279864-1/200x200" class="track-cover" alt="Обложка трека">
             <div class="track-info">
                 <h2 class="gradient-text" style="margin-bottom: 10px;">Каменный олень</h2>
@@ -218,17 +228,6 @@
         </div>
 
         <!-- Трек 2 -->
-        <div class="track-item">
-            <img src="covers/cover2.jpg" class="track-cover" alt="Обложка трека">
-            <div class="track-info">
-                <h2 class="gradient-text" style="margin-bottom: 10px;">Фотонный чиж</h2>
-                <audio controls>
-                    <source src="tracks/чиж.mp3" type="audio/mpeg">
-                </audio>
-                <button class="btn" onclick="window.location.href='tracks/чиж.mp3'">Скачать</button>
-            </div>
-        </div>
-
         <div class="track-item">
             <img src="https://avatars.yandex.net/get-music-content/14270105/a18dd5b4.a.36099927-1/200x200" class="track-cover" alt="Обложка трека">
             <div class="track-info">
@@ -249,7 +248,7 @@
                 <button class="btn" onclick="window.location.href='tracks/ядерныйкабан.mp3'">Скачать</button>
             </div>
         </div>
-        <div class="track-item">
+<!--         <div class="track-item">
             <img src="covers/cover5.jpg" class="track-cover" alt="Обложка трека">
             <div class="track-info">
                 <h2 class="gradient-text" style="margin-bottom: 10px;">Тёмный крокодил</h2>
@@ -258,7 +257,7 @@
                 </audio>
                 <button class="btn" onclick="window.location.href='tracks/крокодил.mp3'">Скачать</button>
             </div>
-        </div>
+        </div> -->
         <div class="track-item">
             <img src="https://avatars.yandex.net/get-music-content/14183125/96b61418.a.36260312-1/200x200" class="track-cover" alt="Обложка трека">
             <div class="track-info">
