--- a/index.html
+++ b/index.html
@@ -205,6 +205,16 @@
 
     <!-- Список треков -->
     <div class="track-list">
+        <div class="track-item">
+            <img src="covers/cover5.jpg" class="track-cover" alt="Обложка трека">
+            <div class="track-info">
+                <h2 class="gradient-text" style="margin-bottom: 10px;">Тёмный крокодил</h2>
+                <audio controls>
+                    <source src="tracks/крокодил.mp3" type="audio/mpeg">
+                </audio>
+                <button class="btn" onclick="window.location.href='tracks/крокодил.mp3'">Скачать</button>
+            </div>
+        </div> -->
         <!-- Трек 1 -->
         <div class="track-item">
             <img src="covers/cover2.jpg" class="track-cover" alt="Обложка трека">
@@ -248,16 +258,7 @@
                 <button class="btn" onclick="window.location.href='tracks/ядерныйкабан.mp3'">Скачать</button>
             </div>
         </div>
-<!--         <div class="track-item">
-            <img src="covers/cover5.jpg" class="track-cover" alt="Обложка трека">
-            <div class="track-info">
-                <h2 class="gradient-text" style="margin-bottom: 10px;">Тёмный крокодил</h2>
-                <audio controls>
-                    <source src="tracks/крокодил.mp3" type="audio/mpeg">
-                </audio>
-                <button class="btn" onclick="window.location.href='tracks/крокодил.mp3'">Скачать</button>
-            </div>
-        </div> -->
+        
         <div class="track-item">
             <img src="https://avatars.yandex.net/get-music-content/14183125/96b61418.a.36260312-1/200x200" class="track-cover" alt="Обложка трека">
             <div class="track-info">
