--- a/index.html
+++ b/index.html
@@ -202,6 +202,16 @@
     <section class="parallax">
         <h1 style="color: #fff; text-shadow: 0 0 20px #00f3ff">NoNe_curate</h1>
     </section>
+    <div class="track-item">
+            <img src="https://avatars.yandex.net/get-music-content/13043189/20e217a6.a.36571143-1/m1000x1000" class="track-cover" alt="Обложка трека">
+            <div class="track-info">
+                <h2 class="gradient-text" style="margin-bottom: 10px;">Шорохолось</h2>
+                <audio controls>
+                    <source src="tracks/Шорохолось.mp3" type="audio/mpeg">
+                </audio>
+                <button class="btn" onclick="window.location.href='tracks/Шорохолось.mp3'">Скачать</button>
+            </div>
+        </div>
 
     <!-- Список треков -->
     <div class="track-list">
